--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,19 @@
     font-family: 'Roboto', sans-serif;
 }
 
+html {
+    height: 100%;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
 
 header {
+    max-width: 100%;
     font-size: 1.2rem;
 }
 
@@ -128,6 +139,14 @@ nav ul li {
     border-radius: 20px;
     border: 0;
 }
+.left button:hover{
+    width: 50%;
+    height: 40px;
+    color: white;
+    background: rgb(32, 100, 114);
+    border-radius: 20px;
+    border: 0;
+}
 
 
 /* footer */
@@ -139,6 +158,7 @@ footer {
 }
 
 .footer-contenido {
+    margin-top: auto;
     color: white;
     display: flex;
     align-items: center;
@@ -236,21 +256,29 @@ footer {
 
 /*usuario*/
 
+.contenedorCuenta a , p{
+    font-size: 1rem;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 5px;
+}
 
 #form {
     width: 300px;
     margin: 80px auto;
-    padding: 20px;
-    border-radius: 4px;
 }
+
 
 #form h1{
     text-align: center;
 }
 
+
 #form button{
     font-size: 1rem;
     padding: 10px;
+    gap: 10px;
     margin-top: 10px;
     width: 100%;
     color: white;
@@ -259,6 +287,11 @@ footer {
     border-radius: 20px;
 }
 
+#form .checkbox{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
 .controlInput {
     display: flex;
     flex-direction: column;
@@ -292,4 +325,18 @@ footer {
 
 }
 
+
+.contenedorCarrito {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+#root {
+    width: 60%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+}
 
