--- a/css/style.css
+++ b/css/style.css
@@ -68,22 +68,6 @@ nav ul li {
     cursor: pointer;
 }
 
-.barraDeBusqueda-container {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.barraDeBusqueda {
-    text-align: center;
-    margin-top: 30px;
-    border-radius: 20px;
-    border: 1px solid #ccc;
-    padding: 10px;
-    width: 80%;
-}
-
 /* productos */
 
 .contenedor_productos{
@@ -139,6 +123,17 @@ nav ul li {
     border-radius: 20px;
     border: 0;
 }
+
+.button{
+    width: 100%;
+    height: 30px;
+    margin-bottom: 10px;
+    color: white;
+    background: blue;
+    border-radius: 20px;
+    border: 0;
+}
+
 .left button:hover{
     width: 50%;
     height: 40px;
@@ -269,9 +264,12 @@ footer {
     margin: 80px auto;
 }
 
-
 #form h1{
     text-align: center;
+}
+
+.form_color{
+    color: black;
 }
 
 
@@ -325,6 +323,9 @@ footer {
 
 }
 
+.carrito{
+    color: black;
+}
 
 .contenedorCarrito {
     display: flex;
